2007-10-02  Sancho Lerena  <slerena@gmail.com>

	* lib/PandoraFMS/DB.pm: Updated and fixed several problems with alerts. 
	Now notification of alert ceased is properly implemented and works
	inside threshold timegap. Event are fired using alert description and not
	alert type, and automatically ceased alerts (depending on min_alert and 
	internal counter) give up alert status and generate event.

	* bin/pandora_snmpconsole: Updated call to execute_alert.

2007-10-01  Sancho Lerena  <slerena@gmail.com>

	* lib/PandoraFMS/DB.pm: Fixed bug for autoimported modules #1805654

	* lib/PandoraFMS/DB.pm: Fixed problem with fixed alerts. Now reports when 
	problem its fixed in event manager (after threshold expires!).

2007-08-28  Sancho Lerena  <slerena@gmail.com>

	* util/pandora_db.pl: Added some fixes and new checks for database
	consistency. Also purge non-init modules (needed to avoid unused modules 
	that take too much time on network servers!).

2007-08-27  Sancho Lerena  <slerena@gmail.com>

        * lib/PandoraFMS/Config.pm: Updated version string.

        * bin/pandora_network: Fixed BUG with SNMP Timeout (net-snmp uses MICROSECONDS
        instead seconds!)

2007-08-23  Sancho Lerena  <slerena@gmail.com>

	* Fixed a BUG in daemon launcher scripts that makes to do not stop servers :(
	
	* Added a updated README.

	* lib/PandoraFMS/Config.pm, bin/pandora_snmpconsole: Real fix for problem in 
	snmplogfile.

2007-08-21 Sancho Lerena <slerena@gmail.com>

	* conf/pandora_server.conf: Final fixes for default file.

	* lib/PandoraFMS/Config.pm: Fixed stupid typo in snmpconsole parameter.

	* bin/*: Disabled flush for each I/O (ready for production).

2007-08-06 Sancho Lerena <slerena@gmail.com>

	* DB.pm: Alert time support uses TIME format instead numeric (changes requested
	by esanchezm).

2007-08-02 Sancho Lerena <slerena@gmail.com>

	* Makefile.PL: Missing dep updated and .pl extensions purged.

	* All (4) startup scripts: Updated startup script.
